# Androidx-lite-lib

./: .gitignore  README.md  build.gradle  settings.gradle  settings.gradle.kts
app/: build.gradle  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: Androidx-lite-lib.xmind  JsonData.json
app/src/main/res/drawable/: bg_audio_view.xml  bg_calendar_blue_circle.xml  bg_solid_layout_color_a_radius_5.xml  ic_3d.xml  ic_menu_map.xml  ic_satellite.xml
app/src/main/res/layout/: activity_main.xml  activity_news_details.xml  activity_test.xml  item_select_sample_lv.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
lib/: build.gradle
lib/src/main/: AndroidManifest.xml
lite/: build.gradle  build.gradle.kts
lite/src/main/: AndroidManifest.xml
lite/src/main/assets/: Androidx-lite-lib.xmind
lite/src/main/cpp/: CMakeLists.txt  DevCore.cpp  logger.cpp  logger.hpp
lite/src/main/res/anim/: action_dialog_hide.xml  action_dialog_show.xml  action_sheet_in.xml  action_sheet_out.xml  easy_popup_hide.xml  easy_popup_show.xml  popup_hide.xml  shake_animation.xml
lite/src/main/res/drawable/: bg_solid_layout_dark_blue_10.xml  bg_solid_layout_white_10.xml  border_triangle.xml  dialog_bg_hint_layout.xml  dialog_btn_gray.xml  dialog_btn_white_smoke.xml  dialog_button_selector.xml  ic_add_pic.xml  ic_audio_icon1.xml  ic_audio_icon2.xml  ic_audio_icon3.xml  ic_cancel.xml  ic_check_selected.xml  ic_edit_text_delete.xml  ic_empty.xml  ic_keyboard_delete.xml  ic_left_white.xml  ic_no_network.xml  (+17 more)
(+211 files in other folders)
